Draw today route

--- a/assets/css/_reset.css
+++ b/assets/css/_reset.css
@@ -7,3 +7,10 @@
     font-family: 'Poppins', sans-serif;
     color: inherit;
 }
+
+.leaflet-layer,
+.leaflet-control-zoom-in,
+.leaflet-control-zoom-out,
+.leaflet-control-attribution {
+  filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
+}
