--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,11 @@
 }
 
 .list-items {
+    height: 100%;
+    overflow: scroll;
+
     li {
-        background-color: color-mix(in srgb, var(--background-color),#000 30%);
+        background-color: color-mix(in srgb, var(--background-color),#000 20%);
         padding: 10px 15px;
         border-radius: 10px;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
