--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import './_reset.css';
 @import './_variables.css';
 @import './_layout.css';
+@import './_icons.css';
 
 #map {
     width: 100%;
@@ -13,7 +14,7 @@
     overflow: scroll;
 
     li {
-        background-color: color-mix(in srgb, var(--background-color),#000 20%);
+        background-color: var(--item-background-color);
         padding: 10px 15px;
         border-radius: 10px;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
@@ -22,7 +23,7 @@
         transition: background-color 0.3s;
     
         &:hover {
-            background-color: color-mix(in srgb, var(--background-color),#000 40%);
+            background-color: var(--item-background-color-hover);
         }
     }
 
