--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -1,4 +1,7 @@
 :root {
     --background-color: light-dark(#efefec, #292d3e);
     --text-color: light-dark(#292d3e, #efefec);
+
+    --item-background-color: color-mix(in srgb, var(--background-color),#000 20%);
+    --item-background-color-hover: color-mix(in srgb, var(--background-color),#000 40%);
 }
