--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -2,6 +2,8 @@
     --background-color: light-dark(#efefec, #292d3e);
     --text-color: light-dark(#292d3e, #efefec);
 
+    --primary-color: #19528e;
+
     --item-background-color: color-mix(in srgb, var(--background-color),#000 20%);
     --item-background-color-hover: color-mix(in srgb, var(--background-color),#000 40%);
 }
