--- a/assets/css/_map.css
+++ b/assets/css/_map.css
@@ -20,7 +20,10 @@
     }
 }
 
-.icon-course-marker {
-    color: rgb(22, 0, 119);
-    font-size: 10px;
+.icon-course-marker > div {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 12px solid transparent;
 }
