--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -3,6 +3,7 @@
     --text-color: light-dark(#292d3e, #efefec);
 
     --primary-color: #19528e;
+    --primary-color-dark: color-mix(in srgb, var(--primary-color),#000 20%);
 
     --item-background-color: color-mix(in srgb, var(--background-color),#000 20%);
     --item-background-color-hover: color-mix(in srgb, var(--background-color),#000 40%);
